--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "prefer-stable": true,
     "require": {
         "php": ">=7.2",
-        "atk4/core": "^1.3",
+        "atk4/core": "dev-master@dev",
         "nikic/fast-route": "^1.3",
         "zendframework/zend-diactoros": "^1.6"
     },
