--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,12 @@
     "prefer-stable": true,
     "require": {
         "php": ">=7.2",
-        "atk4/core": "dev-master@dev",
+        "atk4/core": "dev-develop@dev",
         "nikic/fast-route": "^1.3",
         "zendframework/zend-diactoros": "^1.6"
     },
     "require-dev": {
-        "atk4/ui": "^1.7",
+        "atk4/ui": "dev-develop@dev",
         "codacy/coverage": "dev-master",
         "friendsofphp/php-cs-fixer": "dev-master@dev",
         "phpmd/phpmd": "2.6.0",
