ADD codacy coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_script:
   - php composer.phar install -n
 
 script:
-  - php vendor/bin/phpunit --coverage-clover build/coverage/xml
+  - php vendor/bin/phpunit --coverage-clover coverage/xml
 
 after_script:
-  - php vendor/bin/codacycoverage clover build/coverage/xml
+  - php vendor/bin/codacycoverage clover coverage/xml
