--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,12 @@ php:
 before_script:
   - curl -s http://getcomposer.org/installer | php
   - php composer.phar install -n
+  - composer require satooshi/php-coveralls:~1.0@stable # Require phpCoveralls
+  - mkdir -p coverage/xml # Create a folder to store clover files
 
 script:
-  - php vendor/bin/phpunit --coverage-clover coverage/xml
+  - php vendor/bin/phpunit --coverage-clover coverage/xml/clover.xml
 
 after_script:
-  - php vendor/bin/codacycoverage clover coverage/xml
+  - php vendor/bin/codacycoverage clover coverage/xml/clover.xml
+  - sh -c 'if( [ "$TRAVIS_PHP_VERSION" != "hhvm" ] ); then php vendor/bin/coveralls -v; fi;'
