--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,7 @@
         "phpstan/phpstan": "0.11.5",
         "phpunit/phpunit": "*",
         "squizlabs/php_codesniffer": "3.4.2",
-        "symfony/yaml": "~2.1|~3.0|~4.0",
-        "thecodingmachine/phpstan-safe-rule": "^0.1.0@dev"
+        "symfony/yaml": "~2.1|~3.0|~4.0"
     },
     "config": {
         "sort-packages": true
