--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ script:
 after_script:
   - php vendor/bin/codacycoverage clover coverage/xml/clover.xml
   - sh -c 'if( [ "$TRAVIS_PHP_VERSION" != "hhvm" ] ); then php vendor/bin/coveralls -v; fi;'
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - ./cc-test-reporter after-build --coverage-input-type clover --exit-code $TRAVIS_TEST_RESULT
