--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,9 @@ before_script:
   - ./cc-test-reporter before-build
 
 script:
-  - php vendor/bin/phpunit --coverage-clover coverage/xml/clover.xml
+  - php vendor/bin/phpunit --coverage-clover build/logs/clover.xml
 
 after_script:
-  - php vendor/bin/codacycoverage clover coverage/xml/clover.xml
+  - php vendor/bin/codacycoverage clover build/logs/clover.xml
   - sh -c 'if( [ "$TRAVIS_PHP_VERSION" != "hhvm" ] ); then php vendor/bin/coveralls -v; fi;'
   - ./cc-test-reporter after-build --coverage-input-type clover --exit-code $TRAVIS_TEST_RESULT
