--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ before_script:
   - curl -s http://getcomposer.org/installer | php
   - php composer.phar install -n
   - composer require satooshi/php-coveralls:~1.0@stable # Require phpCoveralls
-  - mkdir -p coverage/xml # Create a folder to store clover files
+  - mkdir -p coverage/xml # Create a folder to store clover files #1
+  - mkdir -p build/logs # Create a folder to store clover files #2
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
