changes for codeclimate - coverage #4

--- a/.coveralls.yml
+++ b/.coveralls.yml
@@ -1,6 +1,6 @@
 # Set folder to clover (must be the same on travis)
-coverage_clover: coverage/xml/clover.xml
+coverage_clover: build/logs/clover.xml
 # Same folder here
-json_path: coverage/xml/coveralls-upload.json
+json_path: build/logs/coveralls-upload.json
 # Don't touch that
 service_name: travis-ci
