--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "php": ">=7.2",
         "atk4/core": "dev-develop@dev",
         "nikic/fast-route": "^1.3",
-        "zendframework/zend-diactoros": "^1.6"
+        "zendframework/zend-diactoros": "^1.6",
+        "ralouphie/mimey": "2.1.*"
     },
     "require-dev": {
         "atk4/ui": "dev-develop@dev",
@@ -24,7 +25,7 @@
         "phpmd/phpmd": "2.6.0",
         "phpmetrics/phpmetrics": "dev-master@dev",
         "phpstan/phpstan": "0.11.5",
-        "phpunit/phpunit": "*",
+        "phpunit/phpunit": "8.1.*",
         "squizlabs/php_codesniffer": "3.4.2",
         "symfony/yaml": "~2.1|~3.0|~4.0"
     },
