--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "phpmd/phpmd": "2.6.0",
         "phpmetrics/phpmetrics": "dev-master@dev",
         "phpstan/phpstan": "0.11.5",
-        "phpunit/phpunit": "8.1.*",
+        "phpunit/phpunit": "*",
         "squizlabs/php_codesniffer": "3.4.2",
         "symfony/yaml": "~2.1|~3.0|~4.0"
     },
