--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php": ">=7.2",
         "atk4/core": "dev-develop@dev",
         "nikic/fast-route": "1.3.0",
-        "zendframework/zend-diactoros": "1.8.6"
+        "zendframework/zend-diactoros": "1.8.6",
         "ralouphie/mimey": "2.1.*"
     },
     "require-dev": {
