--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -40,7 +40,7 @@ return PhpCsFixer\Config::create()
         // Remove useless semicolon statements.
         'no_empty_statement' => true,
         // Remove trailing commas in list function calls.
-        'no_trailing_comma_in_list_call' => true,
+        'no_trailing_comma_in_list_call' => false,
         // PHP single-line arrays should not have trailing comma.
         'no_trailing_comma_in_singleline_array' => true,
         // Removes unneeded curly braces that are superfluous and aren't part of a control structure's body.
