--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
         }
     },
     "scripts": {
-        "fix": "php-cs-fixer fix src",
+        "fix": "php-cs-fixer fix --config=.php_cs.dist src demos",
         "stan": "phpstan analyse src",
         "stan1": "phpstan analyse --level 1 src",
         "stan2": "phpstan analyse --level 2 src",
