--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -105,6 +105,9 @@ return PhpCsFixer\Config::create()
         'no_alternative_syntax' => true,
         'braces' => [
             'position_after_control_structures' => 'same'
+        ],
+        'multiline_whitespace_before_semicolons' => [
+            'strategy' => 'no_multi_line'
         ]
     ])
     ->setFinder(PhpCsFixer\Finder::create()
