--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "prefer-stable": true,
     "require": {
         "php": ">=7.2",
-        "atk4/core": "dev-develop@dev",
+        "atk4/core": "2.0.1",
         "nikic/fast-route": "1.3.0",
         "zendframework/zend-diactoros": "2.1.3",
         "ralouphie/mimey": "2.1.0"
