--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "ralouphie/mimey": "2.1.0"
     },
     "require-dev": {
-        "atk4/ui": "dev-develop@dev",
+        "atk4/ui": "2.0.1",
         "codacy/coverage": "dev-master",
         "friendsofphp/php-cs-fixer": "dev-master@dev",
         "phpmd/phpmd": "2.7.0",
