--- a/composer.json
+++ b/composer.json
@@ -1,81 +1,82 @@
 {
-    "name": "abbadon1334/atk4-fastroute",
-    "description": "description",
-    "type": "project",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Francesco Danti",
-            "email": "fdanti@gmail.com"
-        }
-    ],
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "require": {
-        "php": ">=7.2",
-        "atk4/core": "2.0.1",
-        "nikic/fast-route": "1.3.0",
-        "zendframework/zend-diactoros": "2.1.3",
-        "ralouphie/mimey": "2.1.0"
-    },
-    "require-dev": {
-        "atk4/ui": "2.0.4",
-        "codacy/coverage": "dev-master",
-        "friendsofphp/php-cs-fixer": "dev-master@dev",
-        "phpmd/phpmd": "2.7.0",
-        "phpmetrics/phpmetrics": "dev-master@dev",
-        "phpstan/phpstan": "0.11.15",
-        "phpunit/phpunit": "*",
-        "squizlabs/php_codesniffer": "3.4.2",
-        "symfony/yaml": "~2.1|~3.0|~4.0"
-    },
-    "config": {
-        "sort-packages": true
-    },
-    "autoload": {
-        "psr-4": {
-            "Abbadon1334\\ATKFastRoute\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Abbadon1334\\ATKFastRoute\\Tests\\": "tests/"
-        }
-    },
-    "scripts": {
-        "fix": "php-cs-fixer fix --config=.php_cs.dist src demos tests",
-        "stan": "phpstan analyse src",
-        "stan1": "phpstan analyse --level 1 src",
-        "stan2": "phpstan analyse --level 2 src",
-        "stan3": "phpstan analyse --level 3 src",
-        "stan4": "phpstan analyse --level 4 src",
-        "stan5": "phpstan analyse --level 5 src",
-        "stan6": "phpstan analyse --level 6 src",
-        "stan7": "phpstan analyse --level 7 src",
-        "metrics": [
-            "mkdir -p ./build/report",
-            "mv ./build/report ./build/report_$(date +\"%Y.%m.%d_%H%M%S\")",
-            "phpmetrics --config=./.phpmetrics.json .",
-            "firefox ./build/report/phpmetrics.html/index.html"
-        ],
-        "metrics-clear": [
-            "rm -rf ./build/report_*",
-            "rm -rf ./build/report"
-        ],
-        "unit": [
-            "mkdir -p ./build/coverage",
-            "mv ./build/coverage ./build/coverage_$(date +\"%Y.%m.%d_%H%M%S\")",
-            "phpunit --configuration phpunit.xml"
-        ],
-        "unit-html": [
-            "mkdir -p ./build/coverage",
-            "mv ./build/coverage ./build/coverage_$(date +\"%Y.%m.%d_%H%M%S\")",
-            "phpunit --configuration phpunit.xml --coverage-html ./build/coverage",
-            "firefox ./build/coverage/index.html"
-        ],
-        "unit-clear": [
-            "rm -rf ./build/coverage_*",
-            "rm -rf ./build/coverage"
-        ]
+  "name": "abbadon1334/atk4-fastroute",
+  "description": "description",
+  "type": "project",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Francesco Danti",
+      "email": "fdanti@gmail.com"
     }
+  ],
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "require": {
+    "php": ">=7.3",
+    "atk4/core": "2.0.1",
+    "nikic/fast-route": "1.3.0",
+    "ralouphie/mimey": "2.1.0",
+    "zendframework/zend-diactoros": "2.1.3"
+  },
+  "require-dev": {
+    "atk4/ui": "2.0.4",
+    "codacy/coverage": "dev-master",
+    "friendsofphp/php-cs-fixer": "dev-master@dev",
+    "phpmd/phpmd": "2.7.0",
+    "phpmetrics/phpmetrics": "dev-master@dev",
+    "phpstan/phpstan": "0.11.15",
+    "phpunit/phpunit": "*",
+    "satooshi/php-coveralls": "^2.2",
+    "squizlabs/php_codesniffer": "3.4.2",
+    "symfony/yaml": "~2.1|~3.0|~4.0"
+  },
+  "config": {
+    "sort-packages": true
+  },
+  "autoload": {
+    "psr-4": {
+      "Abbadon1334\\ATKFastRoute\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Abbadon1334\\ATKFastRoute\\Tests\\": "tests/"
+    }
+  },
+  "scripts": {
+    "fix": "php-cs-fixer fix --config=.php_cs.dist src demos tests",
+    "stan": "phpstan analyse src",
+    "stan1": "phpstan analyse --level 1 src",
+    "stan2": "phpstan analyse --level 2 src",
+    "stan3": "phpstan analyse --level 3 src",
+    "stan4": "phpstan analyse --level 4 src",
+    "stan5": "phpstan analyse --level 5 src",
+    "stan6": "phpstan analyse --level 6 src",
+    "stan7": "phpstan analyse --level 7 src",
+    "metrics": [
+      "mkdir -p ./build/report",
+      "mv ./build/report ./build/report_$(date +\"%Y.%m.%d_%H%M%S\")",
+      "phpmetrics --config=./.phpmetrics.json .",
+      "firefox ./build/report/phpmetrics.html/index.html"
+    ],
+    "metrics-clear": [
+      "rm -rf ./build/report_*",
+      "rm -rf ./build/report"
+    ],
+    "unit": [
+      "mkdir -p ./build/coverage",
+      "mv ./build/coverage ./build/coverage_$(date +\"%Y.%m.%d_%H%M%S\")",
+      "phpunit --configuration phpunit.xml"
+    ],
+    "unit-html": [
+      "mkdir -p ./build/coverage",
+      "mv ./build/coverage ./build/coverage_$(date +\"%Y.%m.%d_%H%M%S\")",
+      "phpunit --configuration phpunit.xml --coverage-html ./build/coverage",
+      "firefox ./build/coverage/index.html"
+    ],
+    "unit-clear": [
+      "rm -rf ./build/coverage_*",
+      "rm -rf ./build/coverage"
+    ]
+  }
 }
