--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
   "require-dev": {
     "atk4/ui": "2.4.0",
     "codacy/coverage": "dev-master",
-    "friendsofphp/php-cs-fixer": "dev-master@dev",
-    "phpmd/phpmd": "2.9.1",
-    "phpmetrics/phpmetrics": "dev-master@dev",
+    "friendsofphp/php-cs-fixer": "v3.4.0",
+    "phpmd/phpmd": "2.11.1",
+    "phpmetrics/phpmetrics": "^2.7.4",
     "phpstan/phpstan": "0.12.83",
     "phpunit/phpunit": "*",
     "satooshi/php-coveralls": "2.2.0",
