--- a/composer.json
+++ b/composer.json
@@ -13,22 +13,18 @@
   "prefer-stable": true,
   "require": {
     "php": ">=7.4",
-    "atk4/core": "2.4.0",
+    "atk4/core": "3.1.0",
     "nikic/fast-route": "1.3.0",
     "ralouphie/mimey": "2.1.0",
     "zendframework/zend-diactoros": "2.2.1"
   },
   "require-dev": {
-    "atk4/ui": "2.4.0",
+    "atk4/ui": "3.1.0",
     "codacy/coverage": "dev-master",
     "friendsofphp/php-cs-fixer": "v3.4.0",
-    "phpmd/phpmd": "2.11.1",
     "phpmetrics/phpmetrics": "^2.7.4",
-    "phpstan/phpstan": "0.12.83",
     "phpunit/phpunit": "*",
-    "satooshi/php-coveralls": "2.2.0",
-    "squizlabs/php_codesniffer": "3.6.0",
-    "symfony/yaml": "~2.1|~3.0|~4.0"
+    "satooshi/php-coveralls": "2.2.0"
   },
   "config": {
     "sort-packages": true
