--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
     }
   },
   "scripts": {
-    "fix": "php-cs-fixer fix --config=.php_cs.dist src demos tests",
+    "fix": "php-cs-fixer fix",
     "stan": "phpstan analyse src",
     "stan1": "phpstan analyse --level 1 src",
     "stan2": "phpstan analyse --level 2 src",
