--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
+  - vendor/bin/php-cs-fixer fix --dry-run --using-cache=no --diff --verbose
 
 script:
   - php vendor/bin/phpunit --coverage-clover build/logs/clover.xml
