Add support for php >= 7.4 < 8.2, Refactor Tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
-composer.phar
 /composer.lock
-/.idea
+/build
 /vendor
 .DS_Store
-.php_cs.cache
-/build
-/docs
-routes.cache
+/.idea
+cookie.jar
+/demos/_demo-data/db.sqlite
