--- a/composer.json
+++ b/composer.json
@@ -13,17 +13,17 @@
     "ext-json": "*",
     "php": ">=7.4 <8.2",
     "atk4/core": "~3.1.0",
-    "nikic/fast-route": "1.3.0",
-    "xantios/mimey": "v2.2.0",
-    "laminas/laminas-diactoros": "*"
+    "nikic/fast-route": "~1.3.0",
+    "xantios/mimey": "~v2.2.0",
+    "laminas/laminas-diactoros": "~2.8.0"
   },
   "require-release": {
     "ext-json": "*",
     "php": ">=7.4 <8.2",
     "atk4/core": "~3.1.0",
-    "nikic/fast-route": "1.3.0",
-    "xantios/mimey": "v2.2.0",
-    "laminas/laminas-diactoros": "*"
+    "nikic/fast-route": "~1.3.0",
+    "xantios/mimey": "~v2.2.0",
+    "laminas/laminas-diactoros": "~2.8.0"
   },
   "require-dev": {
     "atk4/ui": "~3.1.0",
