--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,10 @@
     }
   ],
   "require": {
+    "ext-json": "*",
     "php": ">=7.4 <8.2",
     "ext-json": "*",
-    "atk4/core": "~3.1.0",
+    "atk4/core": "dev-develop",
     "laminas/laminas-diactoros": "~2.8.0",
     "nikic/fast-route": "~1.3.0",
     "xantios/mimey": "~v2.2.0"
@@ -20,13 +21,13 @@
   "require-release": {
     "php": ">=7.4 <8.2",
     "ext-json": "*",
-    "atk4/core": "~3.1.0",
+    "atk4/core": "~4.0.0",
     "laminas/laminas-diactoros": "~2.8.0",
     "nikic/fast-route": "~1.3.0",
     "xantios/mimey": "~v2.2.0"
   },
   "require-dev": {
-    "atk4/ui": "~3.1.0",
+    "atk4/ui": "dev-develop",
     "ergebnis/composer-normalize": "^2.13",
     "friendsofphp/php-cs-fixer": "^3.0",
     "guzzlehttp/guzzle": "7.4.1",
@@ -50,9 +51,10 @@
     }
   },
   "config": {
+    "sort-packages": true,
     "allow-plugins": {
-      "ergebnis/composer-normalize": true
-    },
-    "sort-packages": true
+        "ergebnis/composer-normalize": true,
+        "phpstan/extension-installer": true
+    }
   }
 }
